2008-09-20  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Ide.Gui.Content/CompletionTextEditorExtension.cs: fixed
	  code completion issue with empty files.

2008-09-19  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Ide.Gui.Pads.ProjectPad/ProjectFolderNodeBuilder.cs: When
	  renaming a folder, update the modified project, not the whole
	  workspace.
	* MonoDevelop.Ide.Gui/Document.cs: Parse the file after closing the
	  document, so unsaved changes are discarded.
	* gtk-gui/gui.stetic: Updated.

2008-09-19  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Ide.Gui.Components/NodeCommandHandler.cs: Fix check for
	  availability of multiple delete operation.

2008-09-19  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Ide.Commands/RefactoryCommands.cs: fixed 'Bug 397930 -
	  Navigation to generic method not working correctly'.

2008-09-19  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Ide.Gui.Content/CompletionTextEditorExtension.cs: fixed
	  'Bug 427326 – Code Completion: ctrl + S displays the completion
	  window'.

2008-09-18  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Ide.CodeTemplates/TemplateCompletionDataProvider.cs:
	  fixed "Bug 427286 - Code Completion: completion done without
	  showing the completion list".

2008-09-18  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Ide.Dom.Parser,
	  MonoDevelop.Ide.Dom.Parser/AbstractParser.cs,
	  MonoDevelop.Ide.Dom.Parser/ProjectParserService.cs,
	  MonoDevelop.Ide.Dom.Parser/IParser.cs,
	  MonoDevelop.Ide.Dom.Parser/ProjectDomEventArgs.cs,
	  MonoDevelop.Ide.Dom.Parser/ProjectDom.cs,
	  MonoDevelop.Ide.Dom.Output,
	  MonoDevelop.Ide.Dom.Output/OutputFlags.cs,
	  MonoDevelop.Ide.Dom.Output/Ambience.cs,
	  MonoDevelop.Ide.Dom.Output/AmbienceService.cs,
	  MonoDevelop.Ide.Dom.Output/CsharpAmbience.cs,
	  MonoDevelop.Ide.Dom.Output/NetAmbience.cs, MonoDevelop.Ide.Dom,
	  MonoDevelop.Ide.Dom/IMember.cs,
	  MonoDevelop.Ide.Dom/DomReturnType.cs,
	  MonoDevelop.Ide.Dom/DomType.cs,